--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "pretest": "npm install",
-    "test": "mocha --recursive"
+    "test": "make test"
   },
   "dependencies": {
     "body-parser": "^1.15.0",
@@ -18,7 +18,10 @@
     "istanbul": "^0.4.2"
   },
   "devDependencies": {
-    "mocha": "^2.4.5"
+    "coveralls": "^2.11.9",
+    "istanbul": "^0.4.3",
+    "mocha": "^2.4.5",
+    "mocha-lcov-reporter": "^1.2.0"
   },
   "repository": {
     "type": "git",
