--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "pretest": "npm install",
-    "test": "make test"
+    "test": "make test-coveralls"
   },
   "dependencies": {
     "body-parser": "^1.15.0",
