--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "chai": "^3.5.0",
-    "supertest": "^1.2.0",
-    "istanbul": "^0.4.2"
+    "supertest": "^1.2.0"
   },
   "devDependencies": {
     "coveralls": "^2.11.9",
