--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: node_js
 node_js:
-  - "5"
-  - "4"
+  - "8"
+script:
+  - npm run cover
+after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
