--- a/package.json
+++ b/package.json
@@ -3,33 +3,16 @@
   "version": "1.0.0",
   "description": "Nothing just test",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "mocha --reporter spec",
+    "test": "mocha --recursive --reporter spec ",
     "cover": "istanbul cover --report lcov node_modules/mocha/bin/_mocha -- -R spec --recursive"
   },
-  "dependencies": {
-    "body-parser": "^1.15.0",
-    "express": "^4.13.4",
-    "chai": "^3.5.0",
-    "supertest": "^1.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "chai": "^4.2.0",
     "coveralls": "^2.11.9",
-    "istanbul": "^0.4.3",
-    "mocha": "^2.4.5",
-    "mocha-lcov-reporter": "^1.2.0"
+    "istanbul": "^0.4.5",
+    "mocha": "^5.2.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JimmyVV/test-demo.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JimmyVV/test-demo/issues"
-  },
-  "homepage": "https://github.com/JimmyVV/test-demo#readme"
+  "author": ""
 }
